# multibuffer.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md  reproduce_error.lua  test_a.txt  test_b.txt  test_syntax.lua
doc/: multibuffer.txt  tags
lua/multibuffer/: init.lua
lua/multibuffer/extensions/: ripgrep.lua
lua/multibuffer/plugins/: README.md  generic.lua  lsp.lua  ripgrep.lua  symbols.lua
src/: lib.rs  main.rs
test/: a.txt  automated.lua  b.txt  manual.lua  test.lua  test.nu  test_expand.lua
